--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,24 @@
 
     @import url("../src/assets/Styles/font.css");
 }
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    25% {
+      transform: translateY(-10px);
+    }
+    50% {
+      transform: translateY(7px);
+    }
+    70% {
+      transform: translateY(-12px);
+    }
+  }
+  
+  .bounce {
+    display: inline-block;
+    animation: bounce 2s infinite;
+  }
+  
